--- a/flask web app/templates/base.html
+++ b/flask web app/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+!doctype html>
 <html lang="en">
 
 <head>
@@ -26,7 +26,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item dropdown">
+               <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Dropdown
@@ -36,16 +36,25 @@
                       <a class="dropdown-item" href="#">Another action</a>
                       <a class="dropdown-item" href="#">Something else here</a>
                     </div>
-                </li>
+                </li>  
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout</a>
                 </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/MakeVisual">Make Visualization</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/OtherVisual">Other Visualization</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/Help">Help</a>
+                  </li>
             </ul>
         </div>
     </nav>
