made some changes

--- a/flask web app/templates/hjelpe.html
+++ b/flask web app/templates/hjelpe.html
@@ -17,36 +17,30 @@
 
 <body>
     <div class="Welcome">
-        <h1>Graphs</h1>
-        Welcome to using our visualization of CVE reports using Kibana.
+        <h1>Welcome</h1>
+        <p>Welcome to website for visualization of CVE reports. A website using kibana to display visualizations of analysed data </p>
     </div>
     <div class="Usage">
-          <h1>Choosing dates</h1>
-          On the middle right visualization there are a calendar button on top of the graph 
-          where you can freely choose dates between 1999 and early 2023 to look from. Dates before or beyond those given areas will 
-          result in empty spaces on the graphs. In addition, you may click or click and drag over areas on a graph to get it to go deeper 
-          into that given area giving more detailed information about each day/month/week. 
+          <h1>Navigate</h1>
+          <p>Navigate the site using the navigation bar in the top of the website for visualizations at the home page, 
+            create your own visualization of the data in the make visualization page. Login at the login page. And view other visualizations
+            to view visualizations for future forcasting, trends and relation by days of the week.
+   </p>
     </div>
 
     <div class="Graphs">
-        <h1>Graphs</h1>
-        There are different graphs that you can choose to get data for analytics from. 
-        Such as heatmaps to find which weeks have had more incidents, or barplots showing the months 
-        and years to a lineplot showing the incidents per month together with a moving average/trend 
-        plot to be able to see if the current months are trending up or down in amount of incidents.
+        <h1>Viewing dates</h1>
+        <p>Navigate different dates you want to see by using the calendar on one of the visualizations or use the time list
+        at the top of the home page. This will update all the visualizations available on the site. Dates from 1999 to 2022 are available. Clicking or dragging on a graph will
+    also change the dates. </p>
     </div>
 
     <div class ="Visualize">
-        <h1>Visualize</h1>
-        <p>As a user you are able to create your own visualizations but not to save them, as to not disturb 
-        the main page hosting the visualizations. You can only use the data sets that are given, where as the newest updated is titled "cve"</p>
+        <h1>Make Visualization</h1>
+        <p>Follow the page instructions by turning on the editmode then a button named create visualization will appear.
+        Visualizations created here is not yet saveable. Use the data "cve" and add functions and filters on the horizontal and vertical axis to display </p>
     </div>
 
-    <div class="Errors" >
-        <h1>Errors</h1>
-        If you encounter an error as a result of using the edit visualization tool where it ends up stuck in a loading state. Simply close the 
-        tab and go back into the website. 
-    </div>
    
 </body>
 
