--- a/flask web app/templates/index.html
+++ b/flask web app/templates/index.html
@@ -14,8 +14,7 @@
 
 <body>
     <div class=frametest>
-        <iframe src="http://localhost:5601/app/dashboards#/view/3b66c9c0-cee8-11ed-87fe-53cf7399d29b?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1998-12-31T23%3A30%3A00.000Z'%2Cto%3A'2023-02-28T23%3A30%3A00.000Z'))&show-query-input=true&show-time-filter=true" style="position:fixed; height:97%; width:100%;"></iframe>
-        <!--<iframe src="http://localhost:5601/app/dashboards#/view/3b66c9c0-cee8-11ed-87fe-53cf7399d29b?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'2017-08-01T14%3A17%3A34.292Z'%2Cto%3A'2017-08-31T23%3A30%3A00.000Z'))" style="position:fixed; height:97%; width:100%;"</iframe> -->  
+        <iframe src="http://localhost:5601/app/dashboards#/view/9a7131e0-ea7b-11ed-81d2-55f73385f722?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'2017-01-04T12%3A43%3A54.496Z'%2Cto%3Anow))&show-top-menu=true&show-query-input=true&show-time-filter=true&hide-filter-bar=true" style="position:fixed; height:97%; width:100%;"></iframe>
     </div>
 </body>
 
