made some changes

--- a/flask web app/templates/OtherVisual.html
+++ b/flask web app/templates/OtherVisual.html
@@ -16,10 +16,9 @@
 
 <body>
     
-    <img src="{{ url_for('static', filename='Future.png')}}" width="33%": height="50%">
-    <img src="{{ url_for('static', filename='Trending.png')}}" width="33%": height="50%">
-    <img src="{{ url_for('static', filename='DayOfWeek.png')}}" width="33%": height="50%">
-    
+    <img src="{{ url_for('static', filename='Future.png')}}" style="height:33%; width:100%;"> 
+    <img src="{{ url_for('static', filename='Trending.png')}}" style="height:33%; width:100%;">
+    <img src="{{ url_for('static', filename='DayOfWeek.png')}}" style="height:33%; width:100%;">    
     
    
 </body>
